Create Header, Model, Author

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,10 +7,7 @@
   <title>SNE</title>
 </head>
 <body>
-  Before
-  <br>
+  <%- include('../partial/header') %>
   <%- body%>
-  <br>
-  After
 </body>
 </html>
