--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -14,11 +14,16 @@
   <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
   <script defer src="https://unpkg.com/filepond@^4/dist/filepond.js"></script>
   <script defer src="/javascripts/fileUpload.js"></script>
+  <link rel="stylesheet" href="/stylesheets/main.css">
   <title>SNE</title>
 </head>
 <body>
-  <%- include('../partial/header') %>
-  <%- include('../partial/errorMessage') %>
-  <%- body%>
+  <div class="container">
+    <%- include('../partial/header') %>
+    <div class="inner-container">
+      <%- include('../partial/errorMessage') %>
+      <%- body%>
+    </div>
+  </div>
 </body>
 </html>
